refactor by sonarqube